--- a/home.htm
+++ b/home.htm
@@ -2,5 +2,14 @@
 <html>
 <html lang="en">
 <!-- This is our home page -->
+<!-- Seen after logging in-->
+<div class="topnav" id="nav">
+	<a href="#home">Home</a>
+	<a href="journal.html">My Journal</a>
+	<a href="messaging.html">Messages</a>
+	<a href="matching.html">Match</a>
+	<a href="resources.html">Resources</a>
+	<a href="profile.html">Profile</a>
+</div>
 
 </html>
