--- a/home.htm
+++ b/home.htm
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <html lang="en">
+<head>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
 <!-- This is our home page -->
 <!-- Seen after logging in-->
 <div class="topnav" id="nav">
