--- a/home.htm
+++ b/home.htm
@@ -6,13 +6,19 @@
 </head>
 <!-- This is our home page -->
 <!-- Seen after logging in-->
-<div class="topnav" id="nav">
-	<a href="#home">Home</a>
-	<a href="journal.html">My Journal</a>
-	<a href="messaging.html">Messages</a>
-	<a href="matching.html">Match</a>
-	<a href="resources.html">Resources</a>
-	<a href="profile.html">Profile</a>
-</div>
-
+<body>
+    <header>
+        <nav>
+            <div class="logo">Bunnies</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="journaling.html">My Journal</a></li>
+                <li><a href="messaging.html">Messages</a></li>
+                <li><a href="matching.html">Match</a></li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="profile.html">Profile</a></li>
+            </ul>
+        </nav>
+    </header>
+</body>
 </html>
