adding journal link to navbar

--- a/home.htm
+++ b/home.htm
@@ -12,7 +12,7 @@
             <div class="logo">Bunnies</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="journaling.html">My Journal</a></li>
+                <li><a href="Journal/journal.html">My Journal</a></li>
                 <li><a href="messaging.html">Messages</a></li>
                 <li><a href="matching.html">Match</a></li>
                 <li><a href="resources.html">Resources</a></li>
