--- a/messages.html
+++ b/messages.html
@@ -9,7 +9,12 @@
 <div class="container">
     <!--  Message header section starts    -->
             <div class="msg-header">
-            
+                <div class="container1">
+                    <img src="icon.png" class="msgimg">
+                    <div class="active ">
+                        <p>User name</p>
+                    </div>
+                </div>
              </div> 
     <!-- Message header section ends -->
     
