--- a/messages.html
+++ b/messages.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="messagesheet.css">
 </head>
 <body>
 <!-- Main container  -->
