--- a/home.htm
+++ b/home.htm
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <title>Home</title>
 </head>
-<!-- This is our home page -->
-<!-- Seen after logging in-->
 <body>
-    <header>
-        <nav>
-            <div class="logo">Bunnies</div>
-            <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="Journal/journal.html">My Journal</a></li>
-                <li><a href="messages.html">Messages</a></li>
-                <li><a href="matching.html">Match</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="profile.html">Profile</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div id="afterLogin-placeholder"></div>
+    <script>
+        $(document).ready(function() {
+            $("#afterLogin-placeholder").load("navigationBars/afterLogin.html");
+        });
+    </script>
 </body>
 </html>
