--- a/messages.html
+++ b/messages.html
@@ -3,8 +3,15 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="stylesheet.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
+    <div id="afterLogin-placeholder"></div>
+    <script>
+        $(document).ready(function() {
+            $("#afterLogin-placeholder").load("navigationBars/afterLogin.html");
+        });
+    </script>
 <!-- Main container  -->
 <div class="container">
     <!--  Message header section starts    -->
