--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -2,7 +2,7 @@
 <html>
 <html lang="en">
 <head>
-    <!--<link rel="stylesheet" href="stylesheet.css">-->
+    <link rel="stylesheet" href="../stylesheet.css">
     <link rel="stylesheet" href="messagesheet.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="message.js"></script>
