--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -11,7 +11,7 @@
   <div id="afterLogin-placeholder"></div>
     <script>
         $(document).ready(function() {
-            $("#afterLogin-placeholder").load("navigationBars/afterLogin.html");
+            $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
         });
     </script>
   <div class="container">
