--- a/home.htm
+++ b/home.htm
@@ -3,16 +3,64 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="stylesheet.css">
+    <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Manrope';font-size: 22px;
+}
+</style>
 </head>
 <!-- This is our home page -->
 <!-- Seen after logging in-->
-<div class="topnav" id="nav">
-	<a href="#home">Home</a>
-	<a href="journal.html">My Journal</a>
-	<a href="messaging.html">Messages</a>
-	<a href="matching.html">Match</a>
-	<a href="resources.html">Resources</a>
-	<a href="profile.html">Profile</a>
+
+<div class="logo"> 
+    <b>
+        bunnies
+    </b>
 </div>
+
+
+<button class="loginButton" type="submit">
+    <b>
+        Login
+    </b>
+</button>
+
+<br>
+<br>
+<br>
+
+<div class="big motivational quote" id="big quote" style="font-size: 40px;">
+    <div>
+        Find Support.
+    </div> 
+    <div>
+        Share Experiences.
+    </div>
+    <div>
+        Heal Together at UBC.
+    </div>
+</div>
+
+<img class="bunnyImage" src="bunny.svg" alt="big happy fun"/>
+
+<br>
+<br>
+<br>
+
+<button type="submit">Login</button>
+
+
+<div class="bottom stats" id="stats">
+    <div>
+        Active users:
+        201
+    </div>
+    <div>
+        Succesful matches:
+        120
+    </div>
+</div>
+
 
 </html>
