--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -15,6 +15,14 @@
         });
     </script>
   <div class="container">
+    <div class="user-list">
+        <ul>
+            <li data-user="user1">User 1</li>
+            <li data-user="user2">User 2</li>
+            <li data-user="user3">User 3</li>
+            <li data-user="user4">User 4</li>
+        </ul>
+    </div>
     
     <div class="chat-container">
         <!-- msg-header section starts -->
