getting images on journal page

--- a/Journal/journal.html
+++ b/Journal/journal.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../stylesheet.css">
+    <link rel="stylesheet" href="journalStylesheet.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
@@ -12,6 +13,30 @@
             $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
         });
     </script>
+
+    <div class="rectangle-container">
+        <img src="../images/JournalBunny.svg" alt="Journal Bunny" class="bunny-image">
+        <div class="rectangle-content">
+            <h1>Journaling</h1>
+            <div>
+                <div class="icon-description">
+                    <img src="../images/GrowthIcon.svg" alt="Growth Icon" class="growth-icon">
+                    <div class="text">
+                        <h2>Individual Growth</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur. Convallis est urna adipiscing fringilla nulla.</p>
+                    </div>
+                </div>
+                <div class="icon-description">
+                    <img src="../images/BurnoutIcon.svg" alt="Burnout Icon" class="burnout-icon">
+                    <div class="text">
+                        <h2>Reduced Burnout</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur. Convallis est urna adipiscing fringilla nulla.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <h3>
         Add Entry
     </h3>
