home page navigation

--- a/navigationBars/afterLogin.html
+++ b/navigationBars/afterLogin.html
@@ -9,7 +9,7 @@
         <nav>
             <div class="logo">Bunnies</div>
             <ul class="nav-links">
-                <li><a href="/home.htm">Home</a></li>
+                <li><a href="/afterLoginHomePage/afterLoginHome.htm">Home</a></li>
                 <li><a href="/Journal/journal.html">My Journal</a></li>
                 <li><a href="/Messages/messages.html">Messages</a></li>
                 <li><a href="/matching.html">Match</a></li>
@@ -19,6 +19,6 @@
         </nav>
     </header>
     
-    
+
 </body>
 </html>
