--- a/afterLoginHomePage/afterLoginHome.htm
+++ b/afterLoginHomePage/afterLoginHome.htm
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="../stylesheet.css">
+    <link rel="stylesheet" href="../beforeLoginHomePage/beforeLoginStyleSheet.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <title>Home</title>
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
@@ -15,7 +16,7 @@ body {
     <div id="afterLogin-placeholder"></div>
     <script>
         $(document).ready(function() {
-            $("#afterLogin-placeholder").load("navigationBars/afterLogin.html");
+            $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
         });
     </script>
 </body>
@@ -27,13 +28,6 @@ body {
         bunnies
     </b>
 </div>
-
-
-<button class="loginButton" type="submit">
-    <b>
-        Login
-    </b>
-</button>
 
 <br>
 <br>
