Worked on home page

--- a/beforeLoginHomePage/beforeLoginHome.html
+++ b/beforeLoginHomePage/beforeLoginHome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="beforeLoginStyleSheet.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <title>Home</title>
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
@@ -11,14 +11,6 @@ body {
 }
 </style>
 </head>
-<body>
-    <div id="afterLogin-placeholder"></div>
-    <script>
-        $(document).ready(function() {
-            $("#afterLogin-placeholder").load("navigationBars/afterLogin.html");
-        });
-    </script>
-</body>
 <!-- This is our home page -->
 <!-- Seen after logging in-->
 
@@ -41,7 +33,10 @@ body {
 
 <div class="big motivational quote" id="big quote" style="font-size: 40px;">
     <div>
-        Find Support.
+        <mark class="firstWord1">
+            Find
+        </mark>
+         Support.
     </div> 
     <div>
         Share Experiences.
