journal intro done

--- a/Journal/journal.html
+++ b/Journal/journal.html
@@ -2,6 +2,7 @@
 <html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../stylesheet.css">
     <link rel="stylesheet" href="journalStylesheet.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
@@ -18,19 +19,21 @@
         <img src="../images/JournalBunny.svg" alt="Journal Bunny" class="bunny-image">
         <div class="rectangle-content">
             <h1>Journaling</h1>
+            <br><br>
             <div>
                 <div class="icon-description">
                     <img src="../images/GrowthIcon.svg" alt="Growth Icon" class="growth-icon">
                     <div class="text">
                         <h2>Individual Growth</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur. Convallis est urna adipiscing fringilla nulla.</p>
+                        <p>Capture your thoughts, celebrate your successes, <br>and discover patterns that help you grow every day.</p>
                     </div>
                 </div>
+                <br>
                 <div class="icon-description">
                     <img src="../images/BurnoutIcon.svg" alt="Burnout Icon" class="burnout-icon">
                     <div class="text">
                         <h2>Reduced Burnout</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur. Convallis est urna adipiscing fringilla nulla.</p>
+                        <p>Release your worries onto the page and create space <br>for clarity and relaxation in your life.</p>
                     </div>
                 </div>
             </div>
