--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -4,8 +4,10 @@
 <head>
     <link rel="stylesheet" href="../stylesheet.css">
     <link rel="stylesheet" href="messagesheet.css">
+    <link rel="stylesheet" href="messagesheet2.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="message.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 </head>
 <body>
   <div id="afterLogin-placeholder"></div>
@@ -14,6 +16,27 @@
             $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
         });
     </script>
+
+  <div class="rectangle-container">
+    <div class="rectangle-content">
+        <h1>Messaging</h1>
+        <div>
+            <div class="icon-description">
+                <div class="text">
+                    <h2>Chat with matches</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur. Convallis est urna adipiscing fringilla nulla.</p>
+                </div>
+            </div>
+            <div class="icon-description">
+                <div class="text">
+                    <h2>Make new friends</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur. Convallis est urna adipiscing fringilla nulla.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
   <div class="container">
     <div class="user-list">
         <ul>
@@ -28,7 +51,7 @@
         <!-- msg-header section starts -->
         <div class="msg-header">
           <div class="container1">
-            <img src="user1.png" class="msgimg" />
+            <img src="../images/pfp.svg" alt="pfp" class="msgimg">
             <div class="active">
               <p>User name</p>
             </div>
@@ -91,20 +114,14 @@
             </div>
   
             <!-- msg-bottom section -->
-  
             <div class="msg-bottom">
               <div class="input-group">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Write message..."
-                />
-  
-                <span class="input-group-text send-icon">
-                  <i class="bi bi-send"></i>
-                </span>
+                  <input type="text" class="form-control" placeholder="Say hi!">
+                  <div class="input-group-append ">
+                      <span class="input-group-text send-icon "><i class="bi bi-send "></i></span>
+                  </div>
               </div>
-            </div>
+          </div>
           </div>
         </div>
       </div>
