--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -2,15 +2,59 @@
 <html>
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../stylesheet.css">
+    <link rel="stylesheet" href="profileStylesheet.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <div id="afterLogin-placeholder"></div>
     <script>
         $(document).ready(function() {
-            $("#afterLogin-placeholder").load("navigationBars/afterLogin.html");
+            $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
         });
     </script>
+
+    <!--
+    <div class="rectangle-container">
+        <div class="rectangle-content">
+            <h1>Journaling</h1>
+            <br><br>
+            <div>
+                <div class="icon-description">
+                    <img src="../images/GrowthIcon.svg" alt="Growth Icon" class="growth-icon">
+                    <div class="text">
+                        <h2>Individual Growth</h2>
+                        <p>Capture your thoughts, celebrate your successes, <br>and discover patterns that help you grow every day.</p>
+                    </div>
+                </div>
+                <br>
+                <div class="icon-description">
+                    <img src="../images/BurnoutIcon.svg" alt="Burnout Icon" class="burnout-icon">
+                    <div class="text">
+                        <h2>Reduced Burnout</h2>
+                        <p>Release your worries onto the page and create space <br>for clarity and relaxation in your life.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+-->
+
+    <h3>
+        Add Entry
+    </h3>
+
+    <form onsubmit=addJournalEntry(event)>
+        <textarea id="newJournalEntry" name="newJournalEntry" rows="4" cols="50" placeholder="How are you feeling?"></textarea>
+        <br>
+        <input type="submit" value="Add">
+    </form>  
+
+    <h3>
+        Previous entries
+    </h3>
+    <ul id="previousEntries"></ul>
+    <script src="profile.js"></script>
 </body>
 </html>
