--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="../stylesheet.css">
-    <link rel="stylesheet" href="messagesheet.css">
     <link rel="stylesheet" href="messagesheet2.css">
+    <link rel="stylesheet" href="messagesheet.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="message.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -17,24 +17,29 @@
         });
     </script>
 
-  <div class="rectangle-container">
-    <div class="rectangle-content">
-        <h1>Messaging</h1>
-        <div>
-            <div class="icon-description">
-                <div class="text">
-                    <h2>Chat with matches</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Convallis est urna adipiscing fringilla nulla.</p>
-                </div>
-            </div>
-            <div class="icon-description">
-                <div class="text">
-                    <h2>Make new friends</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Convallis est urna adipiscing fringilla nulla.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="rectangle-container">
+  <img src="../images/JournalBunny.svg" alt="Journal Bunny" class="bunny-image">
+  <div class="rectangle-content">
+      <h1>Messaging</h1>
+      <br><br>
+      <div>
+          <div class="icon-description">
+              <img src="../images/GrowthIcon.svg" alt="Growth Icon" class="growth-icon">
+              <div class="text">
+                  <h2>Make friends</h2>
+                  <p>Capture your thoughts, celebrate your successes, <br>and discover patterns that help you grow every day.</p>
+              </div>
+          </div>
+          <br>
+          <div class="icon-description">
+              <img src="../images/BurnoutIcon.svg" alt="Burnout Icon" class="burnout-icon">
+              <div class="text">
+                  <h2>Chat with others</h2>
+                  <p>Release your worries onto the page and create space <br>for clarity and relaxation in your life.</p>
+              </div>
+          </div>
+      </div>
+  </div>
 </div>
 
   <div class="container">
