--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -14,32 +14,38 @@
             $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
         });
     </script>
-
-    <!--
     <div class="rectangle-container">
+        <img src="../images/bunny-profile.png" alt="Profile pic" class="bunny-image">
         <div class="rectangle-content">
-            <h1>Journaling</h1>
+            <h2>Judy Hopps</h2>
             <br><br>
             <div>
                 <div class="icon-description">
-                    <img src="../images/GrowthIcon.svg" alt="Growth Icon" class="growth-icon">
                     <div class="text">
-                        <h2>Individual Growth</h2>
-                        <p>Capture your thoughts, celebrate your successes, <br>and discover patterns that help you grow every day.</p>
+                        <h2>Personality</h2>
                     </div>
                 </div>
                 <br>
                 <div class="icon-description">
-                    <img src="../images/BurnoutIcon.svg" alt="Burnout Icon" class="burnout-icon">
                     <div class="text">
-                        <h2>Reduced Burnout</h2>
-                        <p>Release your worries onto the page and create space <br>for clarity and relaxation in your life.</p>
+                        <h2>Activities</h2>
+                    </div>
+                </div>
+                <br>
+                <div class="icon-description">
+                    <div class="text">
+                        <h2>Living Situation</h2>
+                    </div>
+                </div>
+                <br>
+                <div class="icon-description">
+                    <div class="text">
+                        <h2>Support Goals</h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
--->
 
     <h3>
         Add Entry
