--- a/beforeLoginHomePage/beforeLoginHome.html
+++ b/beforeLoginHomePage/beforeLoginHome.html
@@ -21,7 +21,7 @@ body {
 </div>
 
 
-<button class="loginButton" type="submit">
+<button class="loginButtonOne" type="submit">
     <b>
         Login
     </b>
@@ -31,38 +31,82 @@ body {
 <br>
 <br>
 
-<div class="big motivational quote" id="big quote" style="font-size: 40px;">
-    <div>
-        <mark class="firstWord1">
-            Find
-        </mark>
-         Support.
-    </div> 
-    <div>
-        Share Experiences.
-    </div>
-    <div>
-        Heal Together at UBC.
-    </div>
+<div class="motivationalQuote" id="big quote">
+    <b>
+        <div>
+            <div>
+                <mark class="Find">
+                     Find
+                </mark>
+                    Support.
+            </div> 
+            <div>
+                <mark class="Share">
+                    Share
+                </mark>
+                 Experiences.
+            </div>
+            <div>
+                <mark class="Heal">
+                    Heal
+                </mark>
+                 Together at UBC.
+            </div>
+        </div>
+    </b>
 </div>
 
 <img class="bunnyImage" src="bunny.svg" alt="big happy fun"/>
 
 <br>
-<br>
-<br>
 
-<button type="submit">Login</button>
-
-
-<div class="bottom stats" id="stats">
+<div class="information">
+    Connect with peers who understand your journey and access 
     <div>
-        Active users:
-        201
+        personalized mental health resources.
     </div>
+</div>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+<button class="loginButtonTwo" type="submit">
+    <b>
+        Login
+    </b>
+</button>
+
+<br>
+
+<div class="bottomStats" id="stats">
     <div>
-        Succesful matches:
-        120
+        <div class="activeUsers">
+            Active users:
+        </div>
+        <div class="noOfActiveUsers">
+            201
+        </div>
+    </div>
+    <div class="succefulMatches">
+        <div class="sucessful">
+            Succesful matches:
+        </div>
+        <div class="noOfSuccesfulMatches">
+            120
+        </div>
     </div>
 </div>
 
