before login page

--- a/beforeLoginHomePage/beforeLoginHome.html
+++ b/beforeLoginHomePage/beforeLoginHome.html
@@ -56,7 +56,7 @@ body {
     </b>
 </div>
 
-<img class="bunnyImage" src="bunny.svg" alt="big happy fun"/>
+<img class="bunnyImage" src="../images/bunny.svg" alt="big happy fun"/>
 
 <br>
 
@@ -92,20 +92,24 @@ body {
 <br>
 
 <div class="bottomStats" id="stats">
-    <div>
-        <div class="activeUsers">
-            Active users:
+    <div class="Users">
+        <div>
+            Users:
         </div>
-        <div class="noOfActiveUsers">
-            201
+        <div class="noOfUsers">
+            <b>
+                201+
+            </b>
         </div>
     </div>
-    <div class="succefulMatches">
-        <div class="sucessful">
+    <div class="sucessfulMatches">
+        <div>
             Succesful matches:
         </div>
         <div class="noOfSuccesfulMatches">
-            120
+            <b>
+                120+
+            </b>
         </div>
     </div>
 </div>
