link in login page

--- a/beforeLoginHomePage/beforeLoginHome.html
+++ b/beforeLoginHomePage/beforeLoginHome.html
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <!-- This is our home page -->
-<!-- Seen after logging in-->
+<!-- Seen BEFORE logging in-->
 
 <div class="logo"> 
     <b>
@@ -20,12 +20,13 @@ body {
     </b>
 </div>
 
-
-<button class="loginButtonOne" type="submit">
-    <b>
-        Login
-    </b>
-</button>
+<form action="../Login/login.html" method="GET">
+    <button class="loginButtonOne" type="submit">
+        <b>
+            Login
+        </b>
+    </button>
+</form>
 
 <br>
 <br>
@@ -82,12 +83,11 @@ body {
 <br>
 
 
-
-<button class="loginButtonTwo" type="submit">
-    <b>
-        Login
-    </b>
-</button>
+<form action="../Login/login.html" method="GET">
+    <button class="loginButtonTwo" type="submit">
+        <b>Login</b>
+    </button>
+</form>
 
 <br>
 
