--- a/navigationBars/afterLogin.html
+++ b/navigationBars/afterLogin.html
@@ -12,7 +12,7 @@
                 <li><a href="/afterLoginHomePage/afterLoginHome.htm">Home</a></li>
                 <li><a href="/Journal/journal.html">My Journal</a></li>
                 <li><a href="/Messages/messages.html">Messages</a></li>
-                <li><a href="/matching.html">Match</a></li>
+                <li><a href="/match/match.html">Match</a></li>
                 <li><a href="/resources.html">Resources</a></li>
                 <li><a href="/profile.html">Profile</a></li>
             </ul>
