after log in home page done

--- a/afterLoginHomePage/afterLoginHome.htm
+++ b/afterLoginHomePage/afterLoginHome.htm
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <title>Home</title>
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
+
 <style>
 body {
     font-family: 'Manrope';font-size: 22px;
@@ -23,45 +24,85 @@ body {
 <!-- This is our home page -->
 <!-- Seen after logging in-->
 
-<div class="logo"> 
+
+
+
+<div class="motivationalQuote" id="big quote">
     <b>
-        bunnies
+        <div>
+            <div>
+                <mark class="Find">
+                     Find
+                </mark>
+                    Support.
+            </div> 
+            <div>
+                <mark class="Share">
+                    Share
+                </mark>
+                 Experiences.
+            </div>
+            <div>
+                <mark class="Heal">
+                    Heal
+                </mark>
+                 Together at UBC.
+            </div>
+        </div>
     </b>
 </div>
 
-<br>
-<br>
+<img class="bunnyImage" src="../images/bunny.svg" alt="big happy fun"/>
+
 <br>
 
-<div class="big motivational quote" id="big quote" style="font-size: 40px;">
+<div class="information">
+    Connect with peers who understand your journey and access 
     <div>
-        Find Support.
-    </div> 
-    <div>
-        Share Experiences.
-    </div>
-    <div>
-        Heal Together at UBC.
+        personalized mental health resources.
     </div>
 </div>
 
-<img class="bunnyImage" src="bunny.svg" alt="big happy fun"/>
-
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-<button type="submit">Login</button>
 
 
-<div class="bottom stats" id="stats">
-    <div>
-        Active users:
-        201
+
+
+<br>
+
+<div class="bottomStats" id="stats">
+    <div class="Users">
+        <div>
+            Users:
+        </div>
+        <div class="noOfUsers">
+            <b>
+                201+
+            </b>
+        </div>
     </div>
-    <div>
-        Succesful matches:
-        120
+    <div class="sucessfulMatches">
+        <div>
+            Succesful matches:
+        </div>
+        <div class="noOfSuccesfulMatches">
+            <b>
+                120+
+            </b>
+        </div>
     </div>
 </div>
 
