--- a/navigationBars/afterLogin.html
+++ b/navigationBars/afterLogin.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Bunnies</div>
+            <div class="logo"><b>Bunnies</b></div>
             <ul class="nav-links">
                 <li><a href="/afterLoginHomePage/afterLoginHome.htm">Home</a></li>
                 <li><a href="/Journal/journal.html">My Journal</a></li>
