cover done for messaging

--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -2,9 +2,10 @@
 <html>
 <html lang="en">
 <head>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../stylesheet.css">
-    <link rel="stylesheet" href="messagesheet2.css">
     <link rel="stylesheet" href="messagesheet.css">
+    <link rel="stylesheet" href="messagesheet2.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="message.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -18,28 +19,26 @@
     </script>
 
 <div class="rectangle-container">
-  <img src="../images/JournalBunny.svg" alt="Journal Bunny" class="bunny-image">
   <div class="rectangle-content">
       <h1>Messaging</h1>
       <br><br>
       <div>
-          <div class="icon-description">
-              <img src="../images/GrowthIcon.svg" alt="Growth Icon" class="growth-icon">
+          <div class="description">
               <div class="text">
                   <h2>Make friends</h2>
-                  <p>Capture your thoughts, celebrate your successes, <br>and discover patterns that help you grow every day.</p>
+                  <p>Connect with others who understand your journey. Build meaningful friendships and find comfort in shared experiences.</p>
               </div>
           </div>
           <br>
-          <div class="icon-description">
-              <img src="../images/BurnoutIcon.svg" alt="Burnout Icon" class="burnout-icon">
+          <div class="description">
               <div class="text">
                   <h2>Chat with others</h2>
-                  <p>Release your worries onto the page and create space <br>for clarity and relaxation in your life.</p>
+                  <p>Engage in honest conversations, share your thoughts, and provide or receive support in a safe and compassionate space.</p>
               </div>
           </div>
       </div>
   </div>
+  <img src="../images/MessagesBunny.svg" alt="Journal Bunny" class="bunny-image">
 </div>
 
   <div class="container">
