--- a/Messages/messages.html
+++ b/Messages/messages.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html>
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../stylesheet.css">
-    <link rel="stylesheet" href="messagesheet.css">
-    <link rel="stylesheet" href="messagesheet2.css">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="message.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="../stylesheet.css">
+  <link rel="stylesheet" href="messagesheet.css">
+  <link rel="stylesheet" href="messagesheetCover.css">
+  <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="message.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <title>Messaging</title>
 </head>
 <body>
   <div id="afterLogin-placeholder"></div>
-    <script>
-        $(document).ready(function() {
-            $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
-        });
-    </script>
+  <script>
+    $(document).ready(function () {
+      $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
+    });
+  </script>
 
 <div class="rectangle-container">
   <div class="rectangle-content">
@@ -41,94 +41,87 @@
   <img src="../images/MessagesBunny.svg" alt="Journal Bunny" class="bunny-image">
 </div>
 
+  <!-- Main Container -->
   <div class="container">
+    <!-- User List -->
     <div class="user-list">
-        <ul>
-            <li data-user="user1">User 1</li>
-            <li data-user="user2">User 2</li>
-            <li data-user="user3">User 3</li>
-            <li data-user="user4">User 4</li>
-        </ul>
+      <ul>
+        <li data-user="user1">User 1</li>
+        <li data-user="user2">User 2</li>
+        <li data-user="user3">User 3</li>
+        <li data-user="user4">User 4</li>
+      </ul>
     </div>
-    
+
+    <!-- Chat Container -->
     <div class="chat-container">
-        <!-- msg-header section starts -->
-        <div class="msg-header">
-          <div class="container1">
-            <img src="../images/pfp.svg" alt="pfp" class="msgimg">
-            <div class="active">
-              <p>User name</p>
-            </div>
-          </div>
-        </div>
-        <!-- msg-header section ends -->
-  
-        <!-- Chat inbox  -->
-        <div class="chat-page">
-          <div class="msg-inbox">
-            <div class="chats">
-              <!-- Message container -->
-              <div class="msg-page">
-                <!-- Incoming messages -->
-  
-                <div class="received-chats">
-                  <div class="received-chats-img">
-                    <img src="user2.png" />
-                  </div>
-                  <div class="received-msg">
-                    <div class="received-msg-inbox">
-                      <p>
-                        Hey! How's it going? Just wanted to check in :)
-                      </p>
-                      <span class="time">Today 11:55</span>
-                    </div>
-                  </div>
-                </div>
-                <!-- Outgoing messages -->
-                <div class="outgoing-chats">
-                  <div class="outgoing-chats-img">
-                    <img src="user1.png" />
-                  </div>
-                  <div class="outgoing-msg">
-                    <div class="outgoing-chats-msg">
-                      <p class="multi-msg">
-                        Oh you know ':) midterms
-                      </p>
-                      <p class="multi-msg">
-                        Wbu? How's your new job?
-                      </p>
-                      <span class="time">Today 1:03</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="received-chats">
-                  <div class="received-chats-img">
-                    <img src="user2.png" />
-                  </div>
-                  <div class="received-msg">
-                    <div class="received-msg-inbox">
-                      <p class="single-msg">
-                        Midterms are the worst! but I'm sure you'll do great.
-                      </p>
-                      <span class="time">Today 2:00</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-  
-            <!-- msg-bottom section -->
-            <div class="msg-bottom">
-              <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Say hi!">
-                  <div class="input-group-append ">
-                      <span class="input-group-text send-icon "><i class="bi bi-send "></i></span>
-                  </div>
-              </div>
-          </div>
+      <!-- Header Section -->
+      <div class="msg-header">
+        <div class="container1">
+          <img src="../images/pfp.svg" alt="Profile Picture" class="msgimg">
+          <div class="active">
+            <p>User Name</p>
           </div>
         </div>
       </div>
+
+      <!-- Chat Messages -->
+      <div class="msg-inbox">
+        <div class="chats">
+          <div class="msg-page">
+            <!-- Received Message -->
+            <div class="received-chats">
+              <div class="received-chats-img">
+                <img src="user2.png" alt="User 2">
+              </div>
+              <div class="received-msg">
+                <div class="received-msg-inbox">
+                  <p>Hey! How's it going? Just wanted to check in :)</p>
+                  <span class="time">Today 11:55</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Sent Message -->
+            <div class="outgoing-chats">
+              <div class="outgoing-chats-img">
+                <img src="user1.png" alt="User 1">
+              </div>
+              <div class="outgoing-msg">
+                <div class="outgoing-chats-msg">
+                  <p>Oh you know ':) midterms</p>
+                  <p>Wbu? How's your new job?</p>
+                  <span class="time">Today 1:03</span>
+                </div>
+              </div>
+            </div>
+
+            <!-- Another Received Message -->
+            <div class="received-chats">
+              <div class="received-chats-img">
+                <img src="user2.png" alt="User 2">
+              </div>
+              <div class="received-msg">
+                <div class="received-msg-inbox">
+                  <p>Midterms are the worst! But I'm sure you'll do great.</p>
+                  <span class="time">Today 2:00</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </body>
+
+      <!-- Message Input Section -->
+      <div class="msg-bottom">
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Say hi!">
+          <div class="input-group-append">
+            <span class="input-group-text send-icon"><i class="bi bi-send"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
