--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -25,24 +25,29 @@
                 <div class="icon-description">
                     <div class="text">
                         <h2>Personality</h2>
+                        <p>Introverted</a>
                     </div>
                 </div>
                 <br>
                 <div class="icon-description">
                     <div class="text">
                         <h2>Activities</h2>
+                        <p>Soccer</a>
+                        <p>Swimming</a>
                     </div>
                 </div>
                 <br>
                 <div class="icon-description">
                     <div class="text">
                         <h2>Living Situation</h2>
+                        <p>Commuter</p>
                     </div>
                 </div>
                 <br>
                 <div class="icon-description">
                     <div class="text">
                         <h2>Support Goals</h2>
+                        <p>Study Buddy</p>
                     </div>
                 </div>
                 <br>
