--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -20,38 +20,40 @@
             <div class="text">
                 <h2 id="name" contenteditable="false">Judy Hopps</h2>
             </div>
-            <br><br>
+            <br>
             <div>
                 <div class="icon-description">
                     <div class="text">
                         <h2>Personality</h2>
-                        <p>Introverted</a>
+                        <div class="traits" id="personality">
+                            <p>Introverted</p>
+                        </div>
                     </div>
                 </div>
-                <br>
                 <div class="icon-description">
                     <div class="text">
                         <h2>Activities</h2>
-                        <p>Soccer</a>
-                        <p>Swimming</a>
+                        <div class="traits" id="activities">
+                            <p>Soccer</p>
+                        </div>
                     </div>
                 </div>
-                <br>
                 <div class="icon-description">
                     <div class="text">
                         <h2>Living Situation</h2>
-                        <p>Commuter</p>
+                        <div class="traits" id="living">
+                            <p>Commuter</p>
+                        </div>
                     </div>
                 </div>
-                <br>
                 <div class="icon-description">
                     <div class="text">
                         <h2>Support Goals</h2>
-                        <p>Study Buddy</p>
+                        <div class="traits" id="support">
+                            <p>Make Friends</p>
+                        </div>
                     </div>
                 </div>
-                <br>
-                <br>
                 <button onclick="editProfile()" class="editButton">Edit</button>
                 <button onclick="saveProfile()" class="editButton">Save</button>
             </div>
