--- a/match/match.html
+++ b/match/match.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" href="../stylesheet.css">
     <link rel="stylesheet" href="match.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script> <!-- Include PapaParse -->
 </head>
 <body>
     <div id="afterLogin-placeholder"></div>
@@ -13,65 +12,65 @@
             $("#afterLogin-placeholder").load("../navigationBars/afterLogin.html");
         });
     </script>
-
     <div class="match-main">
         <h1>Find Your Buddy</h1>
     </div>
-
     <!-- Matchmaking container -->
     <div class="match-container" id="profile-container">
+        <!-- Profile section with ID for dynamic updates -->
+        
         <!-- Differences Section -->
         <div class="differences-section">
             <h2>Differences</h2>
             <div class="attributes">
                 <div class="attribute">
                     <p>Personality</p>
-                    <span class="tag" id="difference-personality">Loading...</span>
+                    <span class="tag">Introverted</span>
                 </div>
                 <div class="attribute">
                     <p>Activities</p>
-                    <div id="difference-activities"></div>
+                    <span class="tag">Sports</span>
+                    <span class="tag">Singing</span>
+                    <span class="tag">Climbing</span>
                 </div>
                 <div class="attribute">
                     <p>Living Situation</p>
-                    <span class="tag" id="difference-living">Loading...</span>
+                    <span class="tag">Commuter</span>
                 </div>
                 <div class="attribute">
                     <p>Support Goals</p>
-                    <div id="difference-goals"></div>
+                    <span class="tag">Make Friends</span>
                 </div>
             </div>
             <div class="reject-button">
                 <button id="reject-btn">&#10060;</button>
             </div>
         </div>
-
-        <!-- Profile section with ID for dynamic updates -->
         <div class="profile-section active" id="current-profile">
-            <img src="../images/placeholder.jpg" alt="Profile Picture" id="profile-img">
-            <h3 id="profile-name">Loading...</h3>
-            <p id="profile-bio">Loading...</p>
+            <img src="../images/amy.jpg" alt="Jenna MacDonalds">
+            <h3>Jenna MacDonalds</h3>
+            <p>I'm a UBC student in second year who comes from Bangladesh. Some of my hobbies include going to the gym.</p>
         </div>
-
         <!-- Similarities Section -->
         <div class="similarities-section">
             <h2>Similarities</h2>
             <div class="attributes">
                 <div class="attribute">
                     <p>Activities</p>
-                    <div id="similar-activities"></div>
+                    <span class="tag">Gym</span>
+                    <span class="tag">Swimming</span>
                 </div>
                 <div class="attribute">
                     <p>Personality</p>
-                    <span class="tag" id="similar-personality">Loading...</span>
+                    <span class="tag">Extroverted</span>
                 </div>
                 <div class="attribute">
                     <p>Living Situation</p>
-                    <span class="tag" id="similar-living">Loading...</span>
+                    <span class="tag">On Campus</span>
                 </div>
                 <div class="attribute">
                     <p>Support Goals</p>
-                    <div id="similar-goals"></div>
+                    <span class="tag">Study Buddy</span>
                 </div>
             </div>
             <div class="accept-button">
@@ -79,7 +78,7 @@
             </div>
         </div>
     </div>
-
+    <ul id="previousEntries"></ul>
     <script src="match.js"></script>
 </body>
 </html>
